
* FIXED: JSON parse error when nil body 
* FIXED: URI query parameter encoding
* CHANGE: Removed Stella::Testplan::Stats
* CHANGE: Better output for errors during functional tests
* ADDED: Stella::Testplan#to_json
* ADDED: Stella::Data::Helpers#read_file
* ADDED: Stella::Data::Helpers#resequential
* ADDED: Stella::Data::Helpers#path
* ADDED: no-param, no-header options
* ADDED: Follow redirects within one request definition 
* TODO: review :variables in URI elements
* TODO: review cooking handling. Not always sent automatically. 
* TODO: auth :user, :pass, resource(:domain_value)
* TODO: global responses


#### 0.7.6 (2009-11-24) ###############################

* FIXED: httpclient fix: use full request URI (i.e. path and query string) in authentication (NOTE: SSPINegotiateAuth and NegotiateAuth not tested)
* FIXED: Use request URI in authentication domain


#### 0.7.5 (2009-11-16) ###############################

* FIXED: Correctly capture exceptions in Client
* FIXED: Issue with printing the dot (.) for the start of every usecase
* FIXED: Stats samples not cleared between background calculations
* CHANGE: Do not include testplan, usecase, or request descriptions in digest calculation
* CHANGE: Use 6 digit digest in log directory names
* CHANGE: Client aborts usecase on unhandled exceptions
* ADDED: Support for $perlstyle variables in config
* ADDED: Print log dir below summary report


#### 0.7.4 (2009-11-11) ###############################

* FIXED: Proper handling for timeout errors
* CHANGE: Log directory is now YYYYMMDD-HH-mm-ss-SHA1
* ADDED: Logging to .stella/log
* ADDED: Global variables via --var
* ADDED: Using naive CSV parsing via quickcsv (CSV lib is slooow for large files)
* ADDED: Testplan file cache (load a file only once)


#### 0.7.3 (2009-10-30) ###############################

* FIXED: warning: regexp match /.../n against to UTF-8 string
* ADDED: Arrival rate
* ADDED: Added HTTP auth per request

